--- a/config/config.cfg
+++ b/config/config.cfg
@@ -30,39 +30,46 @@ configuration:
         },
          {
           pin = 4,
+          name = "I_OH_APU_GEN_OFF",
+          type = "DIGITAL_OUTPUT"
+        },
+         {
+          pin = 5,
           name = "S_OH_GROUND_CALL",
           type = "DIGITAL_INPUT",
           default = 0
         }
   
-      ),
-      pwm = (
-        {
-          channel = 5,      
-          name = "Test PWM",
-          dutyCycle = 2    # denominator
+      )
+      # ,
+      # pwm = (
+      #   {
+      #     channel = 5,      
+      #     name = "Test PWM",
+      #     dutyCycle = 2    # denominator
 
-        }
-      )
-    },
-    {
-      serialNumber = "123456",
-      name = "Elec",
-      dhcp = false,
-       pins = (
-        {
-          pin = 1,
-          name= "pot 1",
-          type = "ANALOG_INPUT"
-        },
-        {
-          pin = 2,
-          name = "bulb",
-          type = "ANALOG_OUTPUT",
-          default = 1
-        }
-      )
+      #   }
+      # )
     }
+    # ,
+    # {
+    #   serialNumber = "123456",
+    #   name = "Elec",
+    #   dhcp = false,
+    #    pins = (
+    #     {
+    #       pin = 1,
+    #       name= "pot 1",
+    #       type = "ANALOG_INPUT"
+    #     },
+    #     {
+    #       pin = 2,
+    #       name = "bulb",
+    #       type = "ANALOG_OUTPUT",
+    #       default = 1
+    #     }
+    #   )
+    # }
   )
  
 };
